one blossom completed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <body>
     <div id="container">
       <img id="tree" src="images/CherryTree.png"/>
-    </div>
+
+        <img id="petal0" class="blossom" src="images/blossom1/petal0.png"/>
+        <img id="petal1" class="blossom" src="images/blossom1/petal1.png"/>
+        <img id="petal2" class="blossom" src="images/blossom1/petal2.png"/>
+        <img id="petal3" class="blossom" src="images/blossom1/petal3.png"/>
+        <img id="petal4" class="blossom" src="images/blossom1/petal4.png"/>
+        <img id="petal5" class="blossom" src="images/blossom1/petal5.png"/>
+        <img id="petal6" class="blossom" src="images/blossom1/petal6.png"/>
+        <img id="petal7" class="blossom" src="images/blossom1/petal7.png"/>
+
+      </div>
   </body>
 </html>
