messing with placement of objects

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
         <img id="petal6" class="blossom" src="images/blossom1/petal6.png"/>
         <img id="petal7" class="blossom" src="images/blossom1/petal7.png"/>
 
+        <img id="petal8" class="blossom" src="images/blossom2/petal8.png"/>
+        <img id="petal9" class="blossom" src="images/blossom2/petal9.png"/>
+        <img id="petal10" class="blossom" src="images/blossom2/petal10.png"/>
+        <img id="petal11" class="blossom" src="images/blossom2/petal11.png"/>
+        <img id="petal12" class="blossom" src="images/blossom2/petal12.png"/>
+        <img id="petal13" class="blossom" src="images/blossom2/petal13.png"/>
+        <img id="petal14" class="blossom" src="images/blossom2/petal14.png"/>
+        <img id="petal15" class="blossom" src="images/blossom2/petal15.png"/>
+
       </div>
   </body>
 </html>
