fixed scaling and 3 blossoms

--- a/index.html
+++ b/index.html
@@ -27,6 +27,24 @@
         <img id="petal14" class="blossom" src="images/blossom2/petal14.png"/>
         <img id="petal15" class="blossom" src="images/blossom2/petal15.png"/>
 
+        <img id="petal16" class="blossom" src="images/blossom3/petal16.png"/>
+        <img id="petal17" class="blossom" src="images/blossom3/petal17.png"/>
+        <img id="petal18" class="blossom" src="images/blossom3/petal18.png"/>
+        <img id="petal19" class="blossom" src="images/blossom3/petal19.png"/>
+        <img id="petal20" class="blossom" src="images/blossom3/petal20.png"/>
+        <img id="petal21" class="blossom" src="images/blossom3/petal21.png"/>
+        <img id="petal22" class="blossom" src="images/blossom3/petal22.png"/>
+        <img id="petal23" class="blossom" src="images/blossom3/petal23.png"/>
+
+        <img id="petal24" class="blossom" src="images/blossom4/petal24.png"/>
+        <img id="petal25" class="blossom" src="images/blossom4/petal25.png"/>
+        <img id="petal26" class="blossom" src="images/blossom4/petal26.png"/>
+        <img id="petal27" class="blossom" src="images/blossom4/petal27.png"/>
+        <img id="petal28" class="blossom" src="images/blossom4/petal28.png"/>
+        <img id="petal29" class="blossom" src="images/blossom4/petal29.png"/>
+        <img id="petal30" class="blossom" src="images/blossom4/petal30.png"/>
+        <img id="petal31" class="blossom" src="images/blossom4/petal31.png"/>
+
       </div>
   </body>
 </html>
