--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img id="petal14" class="blossom" src="images/blossom2/petal14.png"/>
         <img id="petal15" class="blossom" src="images/blossom2/petal15.png"/>
 
-        <img id="petal16" class="blossom" src="images/blossom3/petal16.png"/>
+        <!-- <img id="petal16" class="blossom" src="images/blossom3/petal16.png"/>
         <img id="petal17" class="blossom" src="images/blossom3/petal17.png"/>
         <img id="petal18" class="blossom" src="images/blossom3/petal18.png"/>
         <img id="petal19" class="blossom" src="images/blossom3/petal19.png"/>
@@ -43,7 +43,7 @@
         <img id="petal28" class="blossom" src="images/blossom4/petal28.png"/>
         <img id="petal29" class="blossom" src="images/blossom4/petal29.png"/>
         <img id="petal30" class="blossom" src="images/blossom4/petal30.png"/>
-        <img id="petal31" class="blossom" src="images/blossom4/petal31.png"/>
+        <img id="petal31" class="blossom" src="images/blossom4/petal31.png"/> -->
 
       </div>
   </body>
