--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img id="petal14" class="blossom" src="images/blossom2/petal14.png"/>
         <img id="petal15" class="blossom" src="images/blossom2/petal15.png"/>
 
-        <!-- <img id="petal16" class="blossom" src="images/blossom3/petal16.png"/>
+        <img id="petal16" class="blossom" src="images/blossom3/petal16.png"/>
         <img id="petal17" class="blossom" src="images/blossom3/petal17.png"/>
         <img id="petal18" class="blossom" src="images/blossom3/petal18.png"/>
         <img id="petal19" class="blossom" src="images/blossom3/petal19.png"/>
@@ -43,7 +43,53 @@
         <img id="petal28" class="blossom" src="images/blossom4/petal28.png"/>
         <img id="petal29" class="blossom" src="images/blossom4/petal29.png"/>
         <img id="petal30" class="blossom" src="images/blossom4/petal30.png"/>
-        <img id="petal31" class="blossom" src="images/blossom4/petal31.png"/> -->
+        <img id="petal31" class="blossom" src="images/blossom4/petal31.png"/>
+
+        <img id="petal32" class="blossom" src="images/blossom5/petal32.png"/>
+        <img id="petal33" class="blossom" src="images/blossom5/petal33.png"/>
+        <img id="petal34" class="blossom" src="images/blossom5/petal34.png"/>
+        <img id="petal35" class="blossom" src="images/blossom5/petal35.png"/>
+        <img id="petal36" class="blossom" src="images/blossom5/petal36.png"/>
+        <img id="petal37" class="blossom" src="images/blossom5/petal37.png"/>
+        <img id="petal38" class="blossom" src="images/blossom5/petal38.png"/>
+        <img id="petal39" class="blossom" src="images/blossom5/petal39.png"/>
+
+        <img id="petal40" class="blossom" src="images/blossom6/petal40.png"/>
+        <img id="petal41" class="blossom" src="images/blossom6/petal41.png"/>
+        <img id="petal42" class="blossom" src="images/blossom6/petal42.png"/>
+        <img id="petal43" class="blossom" src="images/blossom6/petal43.png"/>
+        <img id="petal44" class="blossom" src="images/blossom6/petal44.png"/>
+        <img id="petal45" class="blossom" src="images/blossom6/petal45.png"/>
+        <img id="petal46" class="blossom" src="images/blossom6/petal46.png"/>
+        <img id="petal47" class="blossom" src="images/blossom6/petal47.png"/>
+
+        <img id="petal48" class="blossom" src="images/blossom7/petal48.png"/>
+        <img id="petal49" class="blossom" src="images/blossom7/petal49.png"/>
+        <img id="petal50" class="blossom" src="images/blossom7/petal50.png"/>
+        <img id="petal51" class="blossom" src="images/blossom7/petal51.png"/>
+        <img id="petal52" class="blossom" src="images/blossom7/petal52.png"/>
+        <img id="petal53" class="blossom" src="images/blossom7/petal53.png"/>
+        <img id="petal54" class="blossom" src="images/blossom7/petal54.png"/>
+        <img id="petal55" class="blossom" src="images/blossom7/petal55.png"/>
+
+        <img id="petal56" class="blossom" src="images/blossom8/petal56.png"/>
+        <img id="petal57" class="blossom" src="images/blossom8/petal57.png"/>
+        <img id="petal58" class="blossom" src="images/blossom8/petal58.png"/>
+        <img id="petal59" class="blossom" src="images/blossom8/petal59.png"/>
+        <img id="petal60" class="blossom" src="images/blossom8/petal60.png"/>
+        <img id="petal61" class="blossom" src="images/blossom8/petal61.png"/>
+        <img id="petal62" class="blossom" src="images/blossom8/petal62.png"/>
+        <img id="petal63" class="blossom" src="images/blossom8/petal63.png"/>
+
+        <img id="petal64" class="blossom" src="images/blossom9/petal64.png"/>
+        <img id="petal65" class="blossom" src="images/blossom9/petal65.png"/>
+        <img id="petal66" class="blossom" src="images/blossom9/petal66.png"/>
+        <img id="petal67" class="blossom" src="images/blossom9/petal67.png"/>
+        <img id="petal68" class="blossom" src="images/blossom9/petal68.png"/>
+        <img id="petal69" class="blossom" src="images/blossom9/petal69.png"/>
+        <img id="petal70" class="blossom" src="images/blossom9/petal70.png"/>
+        <img id="petal71" class="blossom" src="images/blossom9/petal71.png"/>
+
 
       </div>
   </body>
