finished placing all blossoms

--- a/index.html
+++ b/index.html
@@ -288,6 +288,88 @@
         <img id="petal246" class="blossom" src="images/blossom31/petal246.png"/>
         <img id="petal247" class="blossom" src="images/blossom31/petal247.png"/>
 
+        <img id="petal248" class="blossom" src="images/blossom32/petal248.png"/>
+        <img id="petal249" class="blossom" src="images/blossom32/petal249.png"/>
+        <img id="petal250" class="blossom" src="images/blossom32/petal250.png"/>
+        <img id="petal251" class="blossom" src="images/blossom32/petal251.png"/>
+        <img id="petal252" class="blossom" src="images/blossom32/petal252.png"/>
+        <img id="petal253" class="blossom" src="images/blossom32/petal253.png"/>
+        <img id="petal254" class="blossom" src="images/blossom32/petal254.png"/>
+        <img id="petal255" class="blossom" src="images/blossom32/petal255.png"/>
+
+        <img id="petal256" class="blossom" src="images/blossom33/petal256.png"/>
+        <img id="petal257" class="blossom" src="images/blossom33/petal257.png"/>
+        <img id="petal258" class="blossom" src="images/blossom33/petal258.png"/>
+        <img id="petal259" class="blossom" src="images/blossom33/petal259.png"/>
+        <img id="petal260" class="blossom" src="images/blossom33/petal260.png"/>
+        <img id="petal261" class="blossom" src="images/blossom33/petal261.png"/>
+        <img id="petal262" class="blossom" src="images/blossom33/petal262.png"/>
+        <img id="petal263" class="blossom" src="images/blossom33/petal263.png"/>
+
+        <img id="petal264" class="blossom" src="images/blossom34/petal264.png"/>
+        <img id="petal265" class="blossom" src="images/blossom34/petal265.png"/>
+        <img id="petal266" class="blossom" src="images/blossom34/petal266.png"/>
+        <img id="petal267" class="blossom" src="images/blossom34/petal267.png"/>
+        <img id="petal268" class="blossom" src="images/blossom34/petal268.png"/>
+        <img id="petal269" class="blossom" src="images/blossom34/petal269.png"/>
+        <img id="petal270" class="blossom" src="images/blossom34/petal270.png"/>
+        <img id="petal271" class="blossom" src="images/blossom34/petal271.png"/>
+
+        <img id="petal272" class="blossom" src="images/blossom35/petal272.png"/>
+        <img id="petal273" class="blossom" src="images/blossom35/petal273.png"/>
+        <img id="petal274" class="blossom" src="images/blossom35/petal274.png"/>
+        <img id="petal275" class="blossom" src="images/blossom35/petal275.png"/>
+        <img id="petal276" class="blossom" src="images/blossom35/petal276.png"/>
+        <img id="petal277" class="blossom" src="images/blossom35/petal277.png"/>
+        <img id="petal278" class="blossom" src="images/blossom35/petal278.png"/>
+        <img id="petal279" class="blossom" src="images/blossom35/petal279.png"/>
+
+        <img id="petal280" class="blossom" src="images/blossom36/petal280.png"/>
+        <img id="petal281" class="blossom" src="images/blossom36/petal281.png"/>
+        <img id="petal282" class="blossom" src="images/blossom36/petal282.png"/>
+        <img id="petal283" class="blossom" src="images/blossom36/petal283.png"/>
+        <img id="petal284" class="blossom" src="images/blossom36/petal284.png"/>
+        <img id="petal285" class="blossom" src="images/blossom36/petal285.png"/>
+        <img id="petal286" class="blossom" src="images/blossom36/petal286.png"/>
+        <img id="petal287" class="blossom" src="images/blossom36/petal287.png"/>
+
+        <img id="petal288" class="blossom" src="images/blossom37/petal288.png"/>
+        <img id="petal289" class="blossom" src="images/blossom37/petal289.png"/>
+        <img id="petal290" class="blossom" src="images/blossom37/petal290.png"/>
+        <img id="petal291" class="blossom" src="images/blossom37/petal291.png"/>
+        <img id="petal292" class="blossom" src="images/blossom37/petal292.png"/>
+        <img id="petal293" class="blossom" src="images/blossom37/petal293.png"/>
+        <img id="petal294" class="blossom" src="images/blossom37/petal294.png"/>
+        <img id="petal295" class="blossom" src="images/blossom37/petal295.png"/>
+
+        <img id="petal296" class="blossom" src="images/blossom38/petal296.png"/>
+        <img id="petal297" class="blossom" src="images/blossom38/petal297.png"/>
+        <img id="petal298" class="blossom" src="images/blossom38/petal298.png"/>
+        <img id="petal299" class="blossom" src="images/blossom38/petal299.png"/>
+        <img id="petal300" class="blossom" src="images/blossom38/petal300.png"/>
+        <img id="petal301" class="blossom" src="images/blossom38/petal301.png"/>
+        <img id="petal302" class="blossom" src="images/blossom38/petal302.png"/>
+        <img id="petal303" class="blossom" src="images/blossom38/petal303.png"/>
+
+        <img id="petal304" class="blossom" src="images/blossom39/petal304.png"/>
+        <img id="petal305" class="blossom" src="images/blossom39/petal305.png"/>
+        <img id="petal306" class="blossom" src="images/blossom39/petal306.png"/>
+        <img id="petal307" class="blossom" src="images/blossom39/petal307.png"/>
+        <img id="petal308" class="blossom" src="images/blossom39/petal308.png"/>
+        <img id="petal309" class="blossom" src="images/blossom39/petal309.png"/>
+        <img id="petal310" class="blossom" src="images/blossom39/petal310.png"/>
+        <img id="petal311" class="blossom" src="images/blossom39/petal311.png"/>
+
+        <img id="petal312" class="blossom" src="images/blossom40/petal312.png"/>
+        <img id="petal313" class="blossom" src="images/blossom40/petal313.png"/>
+        <img id="petal314" class="blossom" src="images/blossom40/petal314.png"/>
+        <img id="petal315" class="blossom" src="images/blossom40/petal315.png"/>
+        <img id="petal316" class="blossom" src="images/blossom40/petal316.png"/>
+        <img id="petal317" class="blossom" src="images/blossom40/petal317.png"/>
+        <img id="petal318" class="blossom" src="images/blossom40/petal318.png"/>
+        <img id="petal319" class="blossom" src="images/blossom40/petal319.png"/>
+
+
       </div>
   </body>
 </html>
