--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" href="favicon.ico?" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <title>Cherry Blossom Animation</title>
