--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img id="tree" src="images/CherryTree.png"/>
 
       <script type="text/javascript">
-      $(window).load(function() {
+      $(document).ready(function() {
         $("body").removeClass("preload");
         });
       </script>
